# event_ros_tools

./: CMakeLists.txt  README.md  event_ros_tools.rosinstall  nodelet_plugins.xml  package.xml
cfg/: FlickerDyn.cfg
cmake/: CMakeListsROS1.txt  CMakeListsROS2.txt
include/event_ros_tools/: denoiser.h  event_processor.h  event_subscriber_ros1.h  event_subscriber_ros2.h  flicker.h  flicker_ros1.h  image_updater.h  logging.h  rate_ros2.h  slicer.h  slicer_ros1.h  slicer_ros2.h  stamped_image.h  statistics.h
launch/: flicker_driver.launch  flicker_driver_node.launch  flicker_driver_nodelet.launch  flicker_node.launch  flicker_nodelet.launch  rate_node.launch.py  recording_driver.launch  slicer_composition.launch.py  slicer_driver_nodelet.launch  slicer_node.launch  slicer_node.launch.py  slicer_nodelet.launch
msg_ros2/: Rate.msg
src/: bag_to_text.cpp  bag_to_text_ros1.cpp  bag_to_text_ros2.cpp  denoiser.cpp  event_subscriber_ros1.cpp  event_subscriber_ros2.cpp  flicker_node.cpp  flicker_nodelet.cpp  image_updater.cpp  rate_node_ros2.cpp  rate_ros2.cpp  slicer.cpp  slicer_node.cpp  slicer_node_ros2.cpp  slicer_nodelet.cpp  slicer_ros1.cpp  slicer_ros2.cpp  start_recording.py  statistics.cpp  stop_recording.py
