<?xml version="1.0"?>
<package format="3">
  <name>event_ros_tools</name>
  <version>1.0.0</version>
  <description>package with ROS1 and ROS2 tools related to event based cameras</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache2</license>


  <!-- ROS2 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_ros</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_auto</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp_components</depend>
  <depend condition="$ROS_VERSION == 2">rosbag2_cpp</depend>
  <depend condition="$ROS_VERSION == 2">builtin_interfaces</depend>
  <build_depend condition="$ROS_VERSION == 2">rosidl_default_generators</build_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>


  <!-- ROS1 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">nodelet</depend>
  <depend condition="$ROS_VERSION == 1">dynamic_reconfigure</depend>
  <depend condition="$ROS_VERSION == 1">rosbag</depend>
  <exec_depend condition="$ROS_VERSION == 1">nodelet_rosbag</exec_depend>

  <!-- common ROS1/ROS2 dependencies -->
  <depend>dvs_msgs</depend>
  <depend>prophesee_event_msgs</depend>
  <depend>event_array_msgs</depend>  
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>

  <exec_depend>metavision_ros_driver</exec_depend>
 
  
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
    <!-- this is crucial else the package will not be registered! -->
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
